refactor(javafx): 重构测试配置并更新模块导出
- 将重复的服务模拟代码提取为独立的hangingQueryService方法
- 更新ActionsTest中的表格选择逻辑以使用索引选择而非对象选择
- 在测试中添加虚拟列以确保表格结构完整
- 验证编辑操作后的状态确认
- 统一使用库依赖管理替代硬编码版本号
- 在buildSrc中添加testfx和monocle版本定义
- 更新项目版本从4.0.8到4.0.9
- 完善core/uuid和javafx/spring模块的包导出配置
- 修改集合创建方式以返回不可修改的集合实例
- 添加模块描述符测试验证公共API包的导出情况